# arxiv2product

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml
.docs/: README.md  architecture.md  tech_stack.md  workflows.md
.letta/: settings.json
arxiv2product/: __init__.py  backend.py  cli.py  errors.py  ingestion.py  models.py  paper_search.py  pipeline.py  prompts.py  reporting.py  research.py
cli/: README.md  main.py  pyproject.toml
cli/arxiv2product/: backend.py  cli.py  compete.py  compete_tools.py  feedback.py  ingestion.py  paper_search.py  pipeline.py  prompts.py  research.py  trending.py
cli/tests/: test_backend.py  test_pipeline.py  test_spawn_agent.py
