[project]
name = "arxiv2product"
version = "0.1.0"
description = "Generate product ideas from arXiv papers with a multi-agent pipeline."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv",
    "fastapi",
    "httpx",
    "pdfplumber",
    "pydantic",
    "pyfiglet",
    "python-dotenv",
    "symbolica-agentica",
    "uvicorn",
    "cli2",
    "rich",
]

[project.scripts]
arxiv2product = "arxiv2product.cli:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["arxiv2product"]
